# othello-ai

./: .gitignore  .pdm.toml  Makefile  README.md  app.py  conv-layer.py  environment.yml  game.py  keras_model.py  model.py  pyproject.toml  requirements.txt  run_model.py  scores.txt  test_model.py  train_model.py  utils.py
data/: board_10.txt  board_11.txt  board_13.txt  board_15.txt  board_16.txt  board_17.txt  board_18.txt  board_19.txt  board_20.txt  board_21.txt  board_22.txt  board_23.txt  board_24.txt  board_26.txt  board_28.txt  board_7.txt  setup_epoch_dirs.sh  setup_trial_files.sh
data/epoch_0/: board_12.txt  board_13.txt  board_14.txt  board_16.txt  board_2.txt  board_21.txt  board_23.txt  board_24.txt  board_25.txt  board_26.txt  board_29.txt  board_3.txt  board_4.txt  board_5.txt  board_6.txt  board_7.txt  board_8.txt  board_9.txt  move_choices_11.txt  move_choices_13.txt  move_choices_14.txt  move_choices_16.txt  move_choices_18.txt  move_choices_2.txt  move_choices_20.txt  move_choices_21.txt  move_choices_22.txt  move_choices_23.txt  move_choices_24.txt  move_choices_27.txt  move_choices_28.txt  move_choices_29.txt  move_choices_4.txt  move_choices_7.txt  move_choices_8.txt  move_choices_9.txt
data/epoch_1/: board_11.txt  board_14.txt  board_2.txt  board_20.txt  board_22.txt  board_24.txt  board_27.txt  board_7.txt  board_8.txt  board_9.txt  move_choices_10.txt  move_choices_12.txt  move_choices_13.txt  move_choices_17.txt  move_choices_18.txt  (+8 more)
othello-game-master/: game.py  othello.py
othello_game_master/: game.py  modes.py  othello.py
(+6550 files in other folders)
